--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -1,5 +1,11 @@
 .navbar{
     border: 1px solid black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+    margin-bottom: 500px;
 }
 .frm{
      /* border: 1px solid black; */
